--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,14 @@ name = "cwchilvers-io"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "cwchilvers-io"
+path = "src/server.rs"
 
 [dependencies]
 rocket = "0.5.0-rc.1"
+tera = "1"
+
+[dependencies.rocket_dyn_templates]
+version = "=0.1.0-rc.3"
+features = ["tera"]
