--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Personal website.",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "sass": "sass src/styles/main.sass public/css/style.css --watch"
   },
   "author": "Chandler Chilvers",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-handlebars": "^7.1.2"
+    "express-handlebars": "^7.0.7",
+    "sass": "^1.64.2"
   }
 }
