--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "author": "Chandler Chilvers",
   "dependencies": {
+    "argon2": "^0.31.0",
+    "chalk": "^4.1.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
-    "sass": "^1.64.2"
+    "sass": "^1.64.2",
+    "typescript": "^5.1.6"
   }
 }
